@@ -1,5 +1,6 @@
 package org.violetmoon.quark.addons.oddities.inventory;
 
+import net.minecraft.Util;
 import net.minecraft.advancements.CriteriaTriggers;
 import net.minecraft.core.BlockPos;
 import net.minecraft.network.FriendlyByteBuf;
@@ -12,13 +13,14 @@ import net.minecraft.world.entity.player.Player;
 import net.minecraft.world.inventory.AbstractContainerMenu;
 import net.minecraft.world.inventory.Slot;
 import net.minecraft.world.item.ItemStack;
+import net.minecraft.world.item.enchantment.EnchantmentInstance;
 import net.minecraft.world.level.Level;
-import net.minecraftforge.common.Tags;
-
+import net.neoforged.neoforge.common.Tags;
 import org.jetbrains.annotations.NotNull;
-
 import org.violetmoon.quark.addons.oddities.block.be.MatrixEnchantingTableBlockEntity;
 import org.violetmoon.quark.addons.oddities.module.MatrixEnchantingModule;
+
+import java.util.List;
 
 public class MatrixEnchantingMenu extends AbstractContainerMenu {
 
@@ -34,7 +36,7 @@ public class MatrixEnchantingMenu extends AbstractContainerMenu {
 			public int getMaxStackSize() {
 				return 1;
 			}
-		});
+        });
 
 		// Lapis Slot
 		addSlot(new Slot(tile, 1, 15, 44) {
@@ -77,7 +79,9 @@ public class MatrixEnchantingMenu extends AbstractContainerMenu {
 	}
 
 	private void finish(Player player, ItemStack stack) {
-		enchanter.setItem(0, ItemStack.EMPTY);
+		if (!player.level().isClientSide()) {
+            enchanter.setItem(0, ItemStack.EMPTY);
+        }
 
 		player.awardStat(Stats.ENCHANT_ITEM);
 
@@ -107,7 +111,7 @@ public class MatrixEnchantingMenu extends AbstractContainerMenu {
 		ItemStack originalStack = ItemStack.EMPTY;
 		Slot slot = slots.get(index);
 
-		if(slot != null && slot.hasItem()) {
+		if(slot.hasItem()) {
 			ItemStack stackInSlot = slot.getItem();
 			originalStack = stackInSlot.copy();
 
@@ -118,14 +122,14 @@ public class MatrixEnchantingMenu extends AbstractContainerMenu {
 				if(!moveItemStackTo(stackInSlot, 1, 2, true))
 					return ItemStack.EMPTY;
 			} else {
-				if(slots.get(0).hasItem() || !slots.get(0).mayPlace(stackInSlot))
+				if(slots.getFirst().hasItem() || !slots.getFirst().mayPlace(stackInSlot))
 					return ItemStack.EMPTY;
 
-				if(stackInSlot.hasTag()) // Forge: Fix MC-17431
-					slots.get(0).set(stackInSlot.split(1));
+				if(!stackInSlot.isEmpty() && !stackInSlot.getComponents().isEmpty()) // Forge: Fix MC-17431
+					slots.getFirst().set(stackInSlot.split(1));
 
 				else if(!stackInSlot.isEmpty()) {
-					slots.get(0).set(new ItemStack(stackInSlot.getItem(), 1));
+					slots.getFirst().set(new ItemStack(stackInSlot.getItem(), 1));
 					stackInSlot.shrink(1);
 				}
 			}
